fix: less letter spacing

--- a/main.css
+++ b/main.css
@@ -81,7 +81,7 @@ img {
     flex-shrink: 0;
     font-family: "Arial", serif;
     font-size: 30px;
-    letter-spacing: 8px;
+    letter-spacing: 5px;
     margin-top: 20px;
     margin-bottom: 5px;
     text-align: center;
